--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -1,32 +1,26 @@
-name: Deploy to GAE
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   deploy:
-    name: Deploying to Google Cloud
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          project_id: cicd2-361410
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+
       - name: Deploy to App Engine
         id: deploy
         uses: google-github-actions/deploy-appengine@v0.2.0
         with:
-          deliverables: xyz.yaml
+          deliverables: app.yaml
           version: v1
           project_id: cicd2-361410
-
-      - name: Test
-        run: gcloud auth login
